Use standard url parsing (#43)